--- a/TopSuites/index.html
+++ b/TopSuites/index.html
@@ -45,13 +45,13 @@
   <!-- Twitter -->
 
   <!-- plugins -->
-  <link rel="stylesheet" href="css/libs/swiper-bundle.min.css?_v=20241212212531" />
-  <link rel="stylesheet" href="css/libs/fancybox.css?_v=20241212212531" />
-  <link rel="stylesheet" href="css/libs/no-ui-slider.css?_v=20241212212531" />
+  <link rel="stylesheet" href="css/libs/swiper-bundle.min.css?_v=20241219215239" />
+  <link rel="stylesheet" href="css/libs/fancybox.css?_v=20241219215239" />
+  <link rel="stylesheet" href="css/libs/no-ui-slider.css?_v=20241219215239" />
   <!-- plugins -->
 
-  <link rel="stylesheet" href="css/reset.min.css?_v=20241212212531" />
-  <link rel="stylesheet" href="css/style.min.css?_v=20241212212531" />
+  <link rel="stylesheet" href="css/reset.min.css?_v=20241219215239" />
+  <link rel="stylesheet" href="css/style.min.css?_v=20241219215239" />
 
 </head>
 
@@ -219,7 +219,7 @@
           </div>
           <div class="services__slider swiper" data-animate="bottom">
             <div class="swiper-wrapper">
-              <a href="" class="service swiper-slide">
+              <div class="service swiper-slide">
                 <span class="service__image">
                   <picture>
                     <source srcset="img/services/01.webp" type="image/webp">
@@ -229,8 +229,9 @@
                 <span class="service__desc">
                   Pre-buying real estate analysis upon client's request
                 </span>
-              </a>
-              <a href="" class="service swiper-slide">
+                <a href="" class="service__btn btn btn-sm  btn-primary icon-plus">Follow</a>
+              </div>
+              <div class="service swiper-slide">
                 <span class="service__image">
                   <picture>
                     <source srcset="img/services/02.webp" type="image/webp">
@@ -240,8 +241,9 @@
                 <span class="service__desc">
                   Full support from payment to keys handover
                 </span>
-              </a>
-              <a href="" class="service swiper-slide">
+                <a href="" class="service__btn btn btn-sm  btn-primary icon-plus">Follow</a>
+              </div>
+              <div class="service swiper-slide">
                 <span class="service__image">
                   <picture>
                     <source srcset="img/services/03.webp" type="image/webp">
@@ -251,8 +253,9 @@
                 <span class="service__desc">
                   Apartment fit-out/renovation
                 </span>
-              </a>
-              <a href="" class="service swiper-slide">
+                <a href="" class="service__btn btn btn-sm  btn-primary icon-plus">Follow</a>
+              </div>
+              <div class="service swiper-slide">
                 <span class="service__image">
                   <picture>
                     <source srcset="img/services/04.webp" type="image/webp">
@@ -262,8 +265,9 @@
                 <span class="service__desc service__desc-lg">
                   Sale of the apartment through our chain of brokers
                 </span>
-              </a>
-              <a href="" class="service swiper-slide">
+                <a href="" class="service__btn btn btn-sm  btn-primary icon-plus">Follow</a>
+              </div>
+              <div class="service swiper-slide">
                 <span class="service__image">
                   <picture>
                     <source srcset="img/services/01.webp" type="image/webp">
@@ -274,8 +278,9 @@
                   Short-term or
                   <br> long-term rental
                 </span>
-              </a>
-              <a href="" class="service swiper-slide">
+                <a href="" class="service__btn btn btn-sm  btn-primary icon-plus">Follow</a>
+              </div>
+              <div class="service swiper-slide">
                 <span class="service__image">
                   <picture>
                     <source srcset="img/services/02.webp" type="image/webp">
@@ -285,8 +290,9 @@
                 <span class="service__desc">
                   Full support from payment to keys handover
                 </span>
-              </a>
-              <a href="" class="service swiper-slide">
+                <a href="" class="service__btn btn btn-sm  btn-primary icon-plus">Follow</a>
+              </div>
+              <div class="service swiper-slide">
                 <span class="service__image">
                   <picture>
                     <source srcset="img/services/03.webp" type="image/webp">
@@ -296,8 +302,9 @@
                 <span class="service__desc">
                   Apartment fit-out/renovation
                 </span>
-              </a>
-              <a href="" class="service swiper-slide">
+                <a href="" class="service__btn btn btn-sm  btn-primary icon-plus">Follow</a>
+              </div>
+              <div class="service swiper-slide">
                 <span class="service__image">
                   <picture>
                     <source srcset="img/services/04.webp" type="image/webp">
@@ -307,7 +314,8 @@
                 <span class="service__desc">
                   Sale of the apartment through our chain of brokers
                 </span>
-              </a>
+                <a href="" class="service__btn btn btn-sm  btn-primary icon-plus">Follow</a>
+              </div>
             </div>
           </div>
         </div>
@@ -1006,12 +1014,12 @@
     </div>
   </div>
   <!-- plugins -->
-  <script src="js/libs/swiper-bundle.min.js?_v=20241212212531"></script>
-  <script src="js/libs/fancybox.min.js?_v=20241212212531"></script>
-  <script src="js/libs/nouislider.min.js?_v=20241212212531"></script>
+  <script src="js/libs/swiper-bundle.min.js?_v=20241219215239"></script>
+  <script src="js/libs/fancybox.min.js?_v=20241219215239"></script>
+  <script src="js/libs/nouislider.min.js?_v=20241219215239"></script>
   <!-- plugins -->
 
-  <script src="js/app.min.js?_v=20241212212531"></script>
+  <script src="js/app.min.js?_v=20241219215239"></script>
 </body>
 
 </html>
