--- a/TopSuites/ru.html
+++ b/TopSuites/ru.html
@@ -42,12 +42,12 @@
   <link rel="canonical" href="https://ts.proudly.ru/ru/" />
 
   <!-- plugins -->
-  <link rel="stylesheet" href="/css/libs/swiper-bundle.min.css?1.2&_v=20241212212531" />
-  <link rel="stylesheet" href="/css/libs/fancybox.css?1.2&_v=20241212212531" />
+  <link rel="stylesheet" href="/css/libs/swiper-bundle.min.css?1.2&_v=20241219215239" />
+  <link rel="stylesheet" href="/css/libs/fancybox.css?1.2&_v=20241219215239" />
   <!-- plugins -->
 
-  <link rel="stylesheet" href="/css/reset.min.css?1.2&_v=20241212212531" />
-  <link rel="stylesheet" href="/css/style.min.css?1.2&_v=20241212212531" />
+  <link rel="stylesheet" href="/css/reset.min.css?1.2&_v=20241219215239" />
+  <link rel="stylesheet" href="/css/style.min.css?1.2&_v=20241219215239" />
 
 
 
@@ -207,9 +207,9 @@
               <a href="#modal-quote" data-fancybox data-params="service_id:60" class="service swiper-slide">
                 <span class="service__image">
                   <picture>
-                    <source srcset="uploads/services/01(2)550_732.webp" type="image/webp" media="(max-width:575px)">
-                    <source srcset="uploads/services/01(2)550_732.webp" type="image/webp">
-                    <img src="uploads/services/01(2)550_732.jpg" class="cover-image" alt="Анализ недвижимости перед покупкой по запросу клиента">
+                    <source srcset="https://ts.proudly.ru/uploads/services/01(2)550_732.webp" type="image/webp" media="(max-width:575px)">
+                    <source srcset="https://ts.proudly.ru/uploads/services/01(2)550_732.webp" type="image/webp">
+                    <img src="https://ts.proudly.ru/uploads/services/01(2)550_732.jpg" class="cover-image" alt="Анализ недвижимости перед покупкой по запросу клиента">
                   </picture>
                 </span>
                 <span class="service__desc">
@@ -219,9 +219,9 @@
               <a href="#modal-quote" data-fancybox data-params="service_id:61" class="service swiper-slide">
                 <span class="service__image">
                   <picture>
-                    <source srcset="uploads/services/02(2)550_732.webp" type="image/webp" media="(max-width:575px)">
-                    <source srcset="uploads/services/02(2)550_732.webp" type="image/webp">
-                    <img src="uploads/services/02(2)550_732.jpg" class="cover-image" alt="Полное сопровождение от оплаты до передачи ключей .">
+                    <source srcset="https://ts.proudly.ru/uploads/services/02(2)550_732.webp" type="image/webp" media="(max-width:575px)">
+                    <source srcset="https://ts.proudly.ru/uploads/services/02(2)550_732.webp" type="image/webp">
+                    <img src="https://ts.proudly.ru/uploads/services/02(2)550_732.jpg" class="cover-image" alt="Полное сопровождение от оплаты до передачи ключей .">
                   </picture>
                 </span>
                 <span class="service__desc">
@@ -231,9 +231,9 @@
               <a href="#modal-quote" data-fancybox data-params="service_id:59" class="service swiper-slide">
                 <span class="service__image">
                   <picture>
-                    <source srcset="uploads/services/03(2)550_732.webp" type="image/webp" media="(max-width:575px)">
-                    <source srcset="uploads/services/03(2)550_732.webp" type="image/webp">
-                    <img src="uploads/services/03(2)550_732.jpg" class="cover-image" alt="Отделка/ремонт квартиры">
+                    <source srcset="https://ts.proudly.ru/uploads/services/03(2)550_732.webp" type="image/webp" media="(max-width:575px)">
+                    <source srcset="https://ts.proudly.ru/uploads/services/03(2)550_732.webp" type="image/webp">
+                    <img src="https://ts.proudly.ru/uploads/services/03(2)550_732.jpg" class="cover-image" alt="Отделка/ремонт квартиры">
                   </picture>
                 </span>
                 <span class="service__desc">
@@ -243,9 +243,9 @@
               <a href="#modal-quote" data-fancybox data-params="service_id:58" class="service swiper-slide">
                 <span class="service__image">
                   <picture>
-                    <source srcset="uploads/services/04(2)550_732.webp" type="image/webp" media="(max-width:575px)">
-                    <source srcset="uploads/services/04(2)550_732.webp" type="image/webp">
-                    <img src="uploads/services/04(2)550_732.jpg" class="cover-image" alt="Продажа квартиры через нашу сеть брокеров">
+                    <source srcset="https://ts.proudly.ru/uploads/services/04(2)550_732.webp" type="image/webp" media="(max-width:575px)">
+                    <source srcset="https://ts.proudly.ru/uploads/services/04(2)550_732.webp" type="image/webp">
+                    <img src="https://ts.proudly.ru/uploads/services/04(2)550_732.jpg" class="cover-image" alt="Продажа квартиры через нашу сеть брокеров">
                   </picture>
                 </span>
                 <span class="service__desc">
@@ -255,9 +255,9 @@
               <a href="#modal-quote" data-fancybox data-params="service_id:57" class="service swiper-slide">
                 <span class="service__image">
                   <picture>
-                    <source srcset="uploads/services/05(2)550_732.webp" type="image/webp" media="(max-width:575px)">
-                    <source srcset="uploads/services/05(2)550_732.webp" type="image/webp">
-                    <img src="uploads/services/05(2)550_732.jpg" class="cover-image" alt="Краткосрочная или &lt;br&gt;долгосрочная аренда">
+                    <source srcset="https://ts.proudly.ru/uploads/services/05(2)550_732.webp" type="image/webp" media="(max-width:575px)">
+                    <source srcset="https://ts.proudly.ru/uploads/services/05(2)550_732.webp" type="image/webp">
+                    <img src="https://ts.proudly.ru/uploads/services/05(2)550_732.jpg" class="cover-image" alt="Краткосрочная или &lt;br&gt;долгосрочная аренда">
                   </picture>
                 </span>
                 <span class="service__desc">
@@ -359,9 +359,9 @@
                 <div class="case__image">
                   <a href="/ru/cases/#case_the_bay_apartments">
                     <picture>
-                      <source srcset="uploads/cases/27120(2)530_706.webp" type="image/webp" media="(max-width:575px)">
-                      <source srcset="uploads/cases/27120(2)1562_1640.webp" type="image/webp">
-                      <img src="uploads/cases/27120(2)1562_1640.jpg" class="cover-image" alt="Апартаменты The Bay">
+                      <source srcset="https://ts.proudly.ru/uploads/cases/27120(2)530_706.webp" type="image/webp" media="(max-width:575px)">
+                      <source srcset="https://ts.proudly.ru/uploads/cases/27120(2)1562_1640.webp" type="image/webp">
+                      <img src="https://ts.proudly.ru/uploads/cases/27120(2)1562_1640.jpg" class="cover-image" alt="Апартаменты The Bay">
                     </picture>
                   </a>
                 </div>
@@ -443,9 +443,9 @@
                 <div class="case__image">
                   <a href="/ru/cases/#case_port_de_la_mer_apartments">
                     <picture>
-                      <source srcset="uploads/cases/FaiU0306l%2063(3)1255_706.webp" type="image/webp" media="(max-width:575px)">
-                      <source srcset="uploads/cases/FaiU0306l%2063(3)1562_1640.webp" type="image/webp">
-                      <img src="uploads/cases/FaiU0306l 63(3)1562_1640.jpg" class="cover-image" alt="Апартаменты Port de la Mer">
+                      <source srcset="https://ts.proudly.ru/uploads/cases/FaiU0306l%2063(3)1255_706.webp" type="image/webp" media="(max-width:575px)">
+                      <source srcset="https://ts.proudly.ru/uploads/cases/FaiU0306l%2063(3)1562_1640.webp" type="image/webp">
+                      <img src="https://ts.proudly.ru/uploads/cases/FaiU0306l 63(3)1562_1640.jpg" class="cover-image" alt="Апартаменты Port de la Mer">
                     </picture>
                   </a>
                 </div>
@@ -527,9 +527,9 @@
                 <div class="case__image">
                   <a href="/ru/cases/#case_jlt_icon_tower_apartments">
                     <picture>
-                      <source srcset="uploads/cases/DSC04409_HDR_opt1059_706.webp" type="image/webp" media="(max-width:575px)">
-                      <source srcset="uploads/cases/DSC04409_HDR_opt1562_1640.webp" type="image/webp">
-                      <img src="uploads/cases/DSC04409_HDR_opt1562_1640.jpg" class="cover-image" alt="Апартаменты JLT Icon Tower">
+                      <source srcset="https://ts.proudly.ru/uploads/cases/DSC04409_HDR_opt1059_706.webp" type="image/webp" media="(max-width:575px)">
+                      <source srcset="https://ts.proudly.ru/uploads/cases/DSC04409_HDR_opt1562_1640.webp" type="image/webp">
+                      <img src="https://ts.proudly.ru/uploads/cases/DSC04409_HDR_opt1562_1640.jpg" class="cover-image" alt="Апартаменты JLT Icon Tower">
                     </picture>
                   </a>
                 </div>
@@ -611,9 +611,9 @@
                 <div class="case__image">
                   <a href="/ru/cases/#case_city_walk_apartments">
                     <picture>
-                      <source srcset="uploads/cases/1(4)1059_706.webp" type="image/webp" media="(max-width:575px)">
-                      <source srcset="uploads/cases/1(4)1562_1640.webp" type="image/webp">
-                      <img src="uploads/cases/1(4)1562_1640.jpg" class="cover-image" alt="Апартаменты City Walk">
+                      <source srcset="https://ts.proudly.ru/uploads/cases/1(4)1059_706.webp" type="image/webp" media="(max-width:575px)">
+                      <source srcset="https://ts.proudly.ru/uploads/cases/1(4)1562_1640.webp" type="image/webp">
+                      <img src="https://ts.proudly.ru/uploads/cases/1(4)1562_1640.jpg" class="cover-image" alt="Апартаменты City Walk">
                     </picture>
                   </a>
                 </div>
@@ -695,9 +695,9 @@
                 <div class="case__image">
                   <a href="/ru/cases/#case_nikki_beach_apartments">
                     <picture>
-                      <source srcset="uploads/cases/21(2)397_706.webp" type="image/webp" media="(max-width:575px)">
-                      <source srcset="uploads/cases/21(2)1562_1640.webp" type="image/webp">
-                      <img src="uploads/cases/21(2)1562_1640.jpg" class="cover-image" alt="Апартаменты Nikki Beach">
+                      <source srcset="https://ts.proudly.ru/uploads/cases/21(2)397_706.webp" type="image/webp" media="(max-width:575px)">
+                      <source srcset="https://ts.proudly.ru/uploads/cases/21(2)1562_1640.webp" type="image/webp">
+                      <img src="https://ts.proudly.ru/uploads/cases/21(2)1562_1640.jpg" class="cover-image" alt="Апартаменты Nikki Beach">
                     </picture>
                   </a>
                 </div>
@@ -779,9 +779,9 @@
                 <div class="case__image">
                   <a href="/ru/cases/#case_atessa_tower_apartments">
                     <picture>
-                      <source srcset="uploads/cases/marina_24_opt(2)(2)530_706.webp" type="image/webp" media="(max-width:575px)">
-                      <source srcset="uploads/cases/marina_24_opt(2)(2)1562_1640.webp" type="image/webp">
-                      <img src="uploads/cases/marina_24_opt(2)(2)1562_1640.jpg" class="cover-image" alt="Апартаменты Atessa Tower">
+                      <source srcset="https://ts.proudly.ru/uploads/cases/marina_24_opt(2)(2)530_706.webp" type="image/webp" media="(max-width:575px)">
+                      <source srcset="https://ts.proudly.ru/uploads/cases/marina_24_opt(2)(2)1562_1640.webp" type="image/webp">
+                      <img src="https://ts.proudly.ru/uploads/cases/marina_24_opt(2)(2)1562_1640.jpg" class="cover-image" alt="Апартаменты Atessa Tower">
                     </picture>
                   </a>
                 </div>
@@ -863,9 +863,9 @@
                 <div class="case__image">
                   <a href="/ru/cases/#case_the_bay_920_aparments">
                     <picture>
-                      <source srcset="uploads/cases/DSC04602(2)499_706.webp" type="image/webp" media="(max-width:575px)">
-                      <source srcset="uploads/cases/DSC04602(2)1562_1640.webp" type="image/webp">
-                      <img src="uploads/cases/DSC04602(2)1562_1640.jpg" class="cover-image" alt="Апартаменты The Bay 920">
+                      <source srcset="https://ts.proudly.ru/uploads/cases/DSC04602(2)499_706.webp" type="image/webp" media="(max-width:575px)">
+                      <source srcset="https://ts.proudly.ru/uploads/cases/DSC04602(2)1562_1640.webp" type="image/webp">
+                      <img src="https://ts.proudly.ru/uploads/cases/DSC04602(2)1562_1640.jpg" class="cover-image" alt="Апартаменты The Bay 920">
                     </picture>
                   </a>
                 </div>
@@ -930,8 +930,8 @@
               <div class="types__item swiper-slide" data-animate="bottom">
                 <div class="types__item-image">
                   <picture>
-                    <source srcset="uploads/types/01(2)1266_1633.webp" type="image/webp">
-                    <img src="uploads/types/01(2)1266_1633.jpg" class="cover-image" alt="СТУДИЯ">
+                    <source srcset="https://ts.proudly.ru/uploads/types/01(2)1266_1633.webp" type="image/webp">
+                    <img src="https://ts.proudly.ru/uploads/types/01(2)1266_1633.jpg" class="cover-image" alt="СТУДИЯ">
                   </picture>
                 </div>
                 <div class="types__item-content">
@@ -947,8 +947,8 @@
               <div class="types__item swiper-slide" data-animate="bottom">
                 <div class="types__item-image">
                   <picture>
-                    <source srcset="uploads/types/02(2)1266_1633.webp" type="image/webp">
-                    <img src="uploads/types/02(2)1266_1633.jpg" class="cover-image" alt="1-КОМНАТНАЯ">
+                    <source srcset="https://ts.proudly.ru/uploads/types/02(2)1266_1633.webp" type="image/webp">
+                    <img src="https://ts.proudly.ru/uploads/types/02(2)1266_1633.jpg" class="cover-image" alt="1-КОМНАТНАЯ">
                   </picture>
                 </div>
                 <div class="types__item-content">
@@ -966,8 +966,8 @@
               <div class="types__item swiper-slide" data-animate="bottom">
                 <div class="types__item-image">
                   <picture>
-                    <source srcset="uploads/types/03(2)1266_1633.webp" type="image/webp">
-                    <img src="uploads/types/03(2)1266_1633.jpg" class="cover-image" alt="2-КОМНАТНАЯ">
+                    <source srcset="https://ts.proudly.ru/uploads/types/03(2)1266_1633.webp" type="image/webp">
+                    <img src="https://ts.proudly.ru/uploads/types/03(2)1266_1633.jpg" class="cover-image" alt="2-КОМНАТНАЯ">
                   </picture>
                 </div>
                 <div class="types__item-content">
@@ -983,8 +983,8 @@
               <div class="types__item swiper-slide" data-animate="bottom">
                 <div class="types__item-image">
                   <picture>
-                    <source srcset="uploads/types/04(2)1266_1633.webp" type="image/webp">
-                    <img src="uploads/types/04(2)1266_1633.jpg" class="cover-image" alt="3-КОМНАТНАЯ">
+                    <source srcset="https://ts.proudly.ru/uploads/types/04(2)1266_1633.webp" type="image/webp">
+                    <img src="https://ts.proudly.ru/uploads/types/04(2)1266_1633.jpg" class="cover-image" alt="3-КОМНАТНАЯ">
                   </picture>
                 </div>
                 <div class="types__item-content">
@@ -1350,11 +1350,11 @@
   </div>
 
   <!-- plugins -->
-  <script src="/js/libs/swiper-bundle.min.js?1.2&_v=20241212212531"></script>
-  <script src="/js/libs/fancybox.min.js?1.2&_v=20241212212531"></script>
+  <script src="/js/libs/swiper-bundle.min.js?1.2&_v=20241219215239"></script>
+  <script src="/js/libs/fancybox.min.js?1.2&_v=20241219215239"></script>
   <!-- plugins -->
 
-  <script src="/js/app.min.js?1.2&_v=20241212212531"></script>
+  <script src="/js/app.min.js?1.2&_v=20241219215239"></script>
 </body>
 
 </html>
