--- a/src/ru.html
+++ b/src/ru.html
@@ -190,8 +190,8 @@
                                 <a href="#modal-quote" data-fancybox data-params="service_id:60" class="service swiper-slide">
                                     <span class="service__image">
                                         <picture>
-                                            <source srcset="uploads/services/01(2)550_732.webp" type="image/webp" media="(max-width:575px)">
-                                            <source srcset="uploads/services/01(2)550_732.webp" type="image/webp"><img src="uploads/services/01(2)550_732.jpg" class="cover-image" alt="Анализ недвижимости перед покупкой по запросу клиента">
+                                            <source srcset="https://ts.proudly.ru/uploads/services/01(2)550_732.webp" type="image/webp" media="(max-width:575px)">
+                                            <source srcset="https://ts.proudly.ru/uploads/services/01(2)550_732.webp" type="image/webp"><img src="https://ts.proudly.ru/uploads/services/01(2)550_732.jpg" class="cover-image" alt="Анализ недвижимости перед покупкой по запросу клиента">
                                         </picture>
                                     </span>
                                     <span class="service__desc">
@@ -200,8 +200,8 @@
                                 </a> <a href="#modal-quote" data-fancybox data-params="service_id:61" class="service swiper-slide">
                                     <span class="service__image">
                                         <picture>
-                                            <source srcset="uploads/services/02(2)550_732.webp" type="image/webp" media="(max-width:575px)">
-                                            <source srcset="uploads/services/02(2)550_732.webp" type="image/webp"><img src="uploads/services/02(2)550_732.jpg" class="cover-image" alt="Полное сопровождение от оплаты до передачи ключей .">
+                                            <source srcset="https://ts.proudly.ru/uploads/services/02(2)550_732.webp" type="image/webp" media="(max-width:575px)">
+                                            <source srcset="https://ts.proudly.ru/uploads/services/02(2)550_732.webp" type="image/webp"><img src="https://ts.proudly.ru/uploads/services/02(2)550_732.jpg" class="cover-image" alt="Полное сопровождение от оплаты до передачи ключей .">
                                         </picture>
                                     </span>
                                     <span class="service__desc">
@@ -210,8 +210,8 @@
                                 </a> <a href="#modal-quote" data-fancybox data-params="service_id:59" class="service swiper-slide">
                                     <span class="service__image">
                                         <picture>
-                                            <source srcset="uploads/services/03(2)550_732.webp" type="image/webp" media="(max-width:575px)">
-                                            <source srcset="uploads/services/03(2)550_732.webp" type="image/webp"><img src="uploads/services/03(2)550_732.jpg" class="cover-image" alt="Отделка/ремонт квартиры">
+                                            <source srcset="https://ts.proudly.ru/uploads/services/03(2)550_732.webp" type="image/webp" media="(max-width:575px)">
+                                            <source srcset="https://ts.proudly.ru/uploads/services/03(2)550_732.webp" type="image/webp"><img src="https://ts.proudly.ru/uploads/services/03(2)550_732.jpg" class="cover-image" alt="Отделка/ремонт квартиры">
                                         </picture>
                                     </span>
                                     <span class="service__desc">
@@ -220,8 +220,8 @@
                                 </a> <a href="#modal-quote" data-fancybox data-params="service_id:58" class="service swiper-slide">
                                     <span class="service__image">
                                         <picture>
-                                            <source srcset="uploads/services/04(2)550_732.webp" type="image/webp" media="(max-width:575px)">
-                                            <source srcset="uploads/services/04(2)550_732.webp" type="image/webp"><img src="uploads/services/04(2)550_732.jpg" class="cover-image" alt="Продажа квартиры через нашу сеть брокеров">
+                                            <source srcset="https://ts.proudly.ru/uploads/services/04(2)550_732.webp" type="image/webp" media="(max-width:575px)">
+                                            <source srcset="https://ts.proudly.ru/uploads/services/04(2)550_732.webp" type="image/webp"><img src="https://ts.proudly.ru/uploads/services/04(2)550_732.jpg" class="cover-image" alt="Продажа квартиры через нашу сеть брокеров">
                                         </picture>
                                     </span>
                                     <span class="service__desc">
@@ -230,8 +230,8 @@
                                 </a> <a href="#modal-quote" data-fancybox data-params="service_id:57" class="service swiper-slide">
                                     <span class="service__image">
                                         <picture>
-                                            <source srcset="uploads/services/05(2)550_732.webp" type="image/webp" media="(max-width:575px)">
-                                            <source srcset="uploads/services/05(2)550_732.webp" type="image/webp"><img src="uploads/services/05(2)550_732.jpg" class="cover-image" alt="Краткосрочная или &lt;br&gt;долгосрочная аренда">
+                                            <source srcset="https://ts.proudly.ru/uploads/services/05(2)550_732.webp" type="image/webp" media="(max-width:575px)">
+                                            <source srcset="https://ts.proudly.ru/uploads/services/05(2)550_732.webp" type="image/webp"><img src="https://ts.proudly.ru/uploads/services/05(2)550_732.jpg" class="cover-image" alt="Краткосрочная или &lt;br&gt;долгосрочная аренда">
                                         </picture>
                                     </span>
                                     <span class="service__desc">
@@ -332,8 +332,8 @@
                                     <div class="case__image">
                                         <a href="/ru/cases/#case_the_bay_apartments">
                                             <picture>
-                                                <source srcset="uploads/cases/27120(2)530_706.webp" type="image/webp" media="(max-width:575px)">
-                                                <source srcset="uploads/cases/27120(2)1562_1640.webp" type="image/webp"><img src="uploads/cases/27120(2)1562_1640.jpg" class="cover-image" alt="Апартаменты The Bay">
+                                                <source srcset="https://ts.proudly.ru/uploads/cases/27120(2)530_706.webp" type="image/webp" media="(max-width:575px)">
+                                                <source srcset="https://ts.proudly.ru/uploads/cases/27120(2)1562_1640.webp" type="image/webp"><img src="https://ts.proudly.ru/uploads/cases/27120(2)1562_1640.jpg" class="cover-image" alt="Апартаменты The Bay">
                                             </picture>
                                         </a>
                                     </div>
@@ -415,8 +415,8 @@
                                     <div class="case__image">
                                         <a href="/ru/cases/#case_port_de_la_mer_apartments">
                                             <picture>
-                                                <source srcset="uploads/cases/FaiU0306l%2063(3)1255_706.webp" type="image/webp" media="(max-width:575px)">
-                                                <source srcset="uploads/cases/FaiU0306l%2063(3)1562_1640.webp" type="image/webp"><img src="uploads/cases/FaiU0306l 63(3)1562_1640.jpg" class="cover-image" alt="Апартаменты Port de la Mer">
+                                                <source srcset="https://ts.proudly.ru/uploads/cases/FaiU0306l%2063(3)1255_706.webp" type="image/webp" media="(max-width:575px)">
+                                                <source srcset="https://ts.proudly.ru/uploads/cases/FaiU0306l%2063(3)1562_1640.webp" type="image/webp"><img src="https://ts.proudly.ru/uploads/cases/FaiU0306l 63(3)1562_1640.jpg" class="cover-image" alt="Апартаменты Port de la Mer">
                                             </picture>
                                         </a>
                                     </div>
@@ -498,8 +498,8 @@
                                     <div class="case__image">
                                         <a href="/ru/cases/#case_jlt_icon_tower_apartments">
                                             <picture>
-                                                <source srcset="uploads/cases/DSC04409_HDR_opt1059_706.webp" type="image/webp" media="(max-width:575px)">
-                                                <source srcset="uploads/cases/DSC04409_HDR_opt1562_1640.webp" type="image/webp"><img src="uploads/cases/DSC04409_HDR_opt1562_1640.jpg" class="cover-image" alt="Апартаменты JLT Icon Tower">
+                                                <source srcset="https://ts.proudly.ru/uploads/cases/DSC04409_HDR_opt1059_706.webp" type="image/webp" media="(max-width:575px)">
+                                                <source srcset="https://ts.proudly.ru/uploads/cases/DSC04409_HDR_opt1562_1640.webp" type="image/webp"><img src="https://ts.proudly.ru/uploads/cases/DSC04409_HDR_opt1562_1640.jpg" class="cover-image" alt="Апартаменты JLT Icon Tower">
                                             </picture>
                                         </a>
                                     </div>
@@ -581,8 +581,8 @@
                                     <div class="case__image">
                                         <a href="/ru/cases/#case_city_walk_apartments">
                                             <picture>
-                                                <source srcset="uploads/cases/1(4)1059_706.webp" type="image/webp" media="(max-width:575px)">
-                                                <source srcset="uploads/cases/1(4)1562_1640.webp" type="image/webp"><img src="uploads/cases/1(4)1562_1640.jpg" class="cover-image" alt="Апартаменты City Walk">
+                                                <source srcset="https://ts.proudly.ru/uploads/cases/1(4)1059_706.webp" type="image/webp" media="(max-width:575px)">
+                                                <source srcset="https://ts.proudly.ru/uploads/cases/1(4)1562_1640.webp" type="image/webp"><img src="https://ts.proudly.ru/uploads/cases/1(4)1562_1640.jpg" class="cover-image" alt="Апартаменты City Walk">
                                             </picture>
                                         </a>
                                     </div>
@@ -664,8 +664,8 @@
                                     <div class="case__image">
                                         <a href="/ru/cases/#case_nikki_beach_apartments">
                                             <picture>
-                                                <source srcset="uploads/cases/21(2)397_706.webp" type="image/webp" media="(max-width:575px)">
-                                                <source srcset="uploads/cases/21(2)1562_1640.webp" type="image/webp"><img src="uploads/cases/21(2)1562_1640.jpg" class="cover-image" alt="Апартаменты Nikki Beach">
+                                                <source srcset="https://ts.proudly.ru/uploads/cases/21(2)397_706.webp" type="image/webp" media="(max-width:575px)">
+                                                <source srcset="https://ts.proudly.ru/uploads/cases/21(2)1562_1640.webp" type="image/webp"><img src="https://ts.proudly.ru/uploads/cases/21(2)1562_1640.jpg" class="cover-image" alt="Апартаменты Nikki Beach">
                                             </picture>
                                         </a>
                                     </div>
@@ -747,8 +747,8 @@
                                     <div class="case__image">
                                         <a href="/ru/cases/#case_atessa_tower_apartments">
                                             <picture>
-                                                <source srcset="uploads/cases/marina_24_opt(2)(2)530_706.webp" type="image/webp" media="(max-width:575px)">
-                                                <source srcset="uploads/cases/marina_24_opt(2)(2)1562_1640.webp" type="image/webp"><img src="uploads/cases/marina_24_opt(2)(2)1562_1640.jpg" class="cover-image" alt="Апартаменты Atessa Tower">
+                                                <source srcset="https://ts.proudly.ru/uploads/cases/marina_24_opt(2)(2)530_706.webp" type="image/webp" media="(max-width:575px)">
+                                                <source srcset="https://ts.proudly.ru/uploads/cases/marina_24_opt(2)(2)1562_1640.webp" type="image/webp"><img src="https://ts.proudly.ru/uploads/cases/marina_24_opt(2)(2)1562_1640.jpg" class="cover-image" alt="Апартаменты Atessa Tower">
                                             </picture>
                                         </a>
                                     </div>
@@ -830,8 +830,8 @@
                                     <div class="case__image">
                                         <a href="/ru/cases/#case_the_bay_920_aparments">
                                             <picture>
-                                                <source srcset="uploads/cases/DSC04602(2)499_706.webp" type="image/webp" media="(max-width:575px)">
-                                                <source srcset="uploads/cases/DSC04602(2)1562_1640.webp" type="image/webp"><img src="uploads/cases/DSC04602(2)1562_1640.jpg" class="cover-image" alt="Апартаменты The Bay 920">
+                                                <source srcset="https://ts.proudly.ru/uploads/cases/DSC04602(2)499_706.webp" type="image/webp" media="(max-width:575px)">
+                                                <source srcset="https://ts.proudly.ru/uploads/cases/DSC04602(2)1562_1640.webp" type="image/webp"><img src="https://ts.proudly.ru/uploads/cases/DSC04602(2)1562_1640.jpg" class="cover-image" alt="Апартаменты The Bay 920">
                                             </picture>
                                         </a>
                                     </div>
@@ -895,7 +895,7 @@
                                 <div class="types__item swiper-slide" data-animate="bottom">
                                     <div class="types__item-image">
                                         <picture>
-                                            <source srcset="uploads/types/01(2)1266_1633.webp" type="image/webp"><img src="uploads/types/01(2)1266_1633.jpg" class="cover-image" alt="СТУДИЯ">
+                                            <source srcset="https://ts.proudly.ru/uploads/types/01(2)1266_1633.webp" type="image/webp"><img src="https://ts.proudly.ru/uploads/types/01(2)1266_1633.jpg" class="cover-image" alt="СТУДИЯ">
                                         </picture>
                                     </div>
                                     <div class="types__item-content">
@@ -911,7 +911,7 @@
                                 <div class="types__item swiper-slide" data-animate="bottom">
                                     <div class="types__item-image">
                                         <picture>
-                                            <source srcset="uploads/types/02(2)1266_1633.webp" type="image/webp"><img src="uploads/types/02(2)1266_1633.jpg" class="cover-image" alt="1-КОМНАТНАЯ">
+                                            <source srcset="https://ts.proudly.ru/uploads/types/02(2)1266_1633.webp" type="image/webp"><img src="https://ts.proudly.ru/uploads/types/02(2)1266_1633.jpg" class="cover-image" alt="1-КОМНАТНАЯ">
                                         </picture>
                                     </div>
                                     <div class="types__item-content">
@@ -927,7 +927,7 @@
                                 <div class="types__item swiper-slide" data-animate="bottom">
                                     <div class="types__item-image">
                                         <picture>
-                                            <source srcset="uploads/types/03(2)1266_1633.webp" type="image/webp"><img src="uploads/types/03(2)1266_1633.jpg" class="cover-image" alt="2-КОМНАТНАЯ">
+                                            <source srcset="https://ts.proudly.ru/uploads/types/03(2)1266_1633.webp" type="image/webp"><img src="https://ts.proudly.ru/uploads/types/03(2)1266_1633.jpg" class="cover-image" alt="2-КОМНАТНАЯ">
                                         </picture>
                                     </div>
                                     <div class="types__item-content">
@@ -943,7 +943,7 @@
                                 <div class="types__item swiper-slide" data-animate="bottom">
                                     <div class="types__item-image">
                                         <picture>
-                                            <source srcset="uploads/types/04(2)1266_1633.webp" type="image/webp"><img src="uploads/types/04(2)1266_1633.jpg" class="cover-image" alt="3-КОМНАТНАЯ">
+                                            <source srcset="https://ts.proudly.ru/uploads/types/04(2)1266_1633.webp" type="image/webp"><img src="https://ts.proudly.ru/uploads/types/04(2)1266_1633.jpg" class="cover-image" alt="3-КОМНАТНАЯ">
                                         </picture>
                                     </div>
                                     <div class="types__item-content">
