--- a/src/service.html
+++ b/src/service.html
@@ -525,8 +525,8 @@
                                         </div>
                                         <div class="types-repairs__slider swiper">
                                             <div class="swiper-wrapper">
-                                                <a href="@img/gallery/desgin_re1.jpg" data-fancybox="types-gallery-2" class="types-repairs__slide swiper-slide">
-                                                    <img src="@img/gallery/desgin_re1.jpg" class="cover-image" alt="Фото проекта">
+                                                <a href="@img/gallery/design_re1.jpg" data-fancybox="types-gallery-2" class="types-repairs__slide swiper-slide">
+                                                    <img src="@img/gallery/design_re1.jpg" class="cover-image" alt="Фото проекта">
                                                 </a>
                                                 <a href="@img/gallery/design_re2.jpg" data-fancybox="types-gallery-2" class="types-repairs__slide swiper-slide">
                                                     <img src="@img/gallery/design_re2.jpg" class="cover-image" alt="Фото проекта">
@@ -560,21 +560,27 @@
                                 </div>
                             </div>
                             <form action="#" class="types-repairs__form">
-                                <div class="form__row">
-                                    <label class="form__field">
-                                        <input type="text" name="name" data-required class="form__input" placeholder="">
-                                        <span class="form__field-placeholder">Имя</span>
-                                    </label>
-                                    <span class="form__error">Введите корректное имя</span>
+                                <div class="types-repairs__form-top">
+                                    <div class="form__row">
+                                        <label class="form__field">
+                                            <input type="text" name="name" data-required class="form__input" placeholder="">
+                                            <span class="form__field-placeholder">Имя</span>
+                                        </label>
+                                        <span class="form__error">Введите корректное имя</span>
+                                    </div>
+                                    <div class="form__row">
+                                        <label class="form__field">
+                                            <input type="tel" name="phone" data-required class="form__input" placeholder="">
+                                            <span class="form__field-placeholder">Телефон</span>
+                                        </label>
+                                        <span class="form__error">Введите корректный номер телефона</span>
+                                    </div>
+                                    <button type="submit" class="btn btn-primary btn-sm">Отправить</button>
                                 </div>
-                                <div class="form__row">
-                                    <label class="form__field">
-                                        <input type="tel" name="phone" data-required class="form__input" placeholder="">
-                                        <span class="form__field-placeholder">Телефон</span>
-                                    </label>
-                                    <span class="form__error">Введите корректный номер телефона</span>
-                                </div>
-                                <button type="submit" class="btn btn-primary btn-sm">Отправить</button>
+                                <label class="form__checkbox form__checkbox-white">
+                                    <input type="checkbox" checked data-required name="privacy" class="form__checkbox-input hidden" hidden>
+                                    <span class="form__checkbox-content">Я прочитал и согласен <a href="" class="form__privacy-link">политикой конфиденциальности</a></span>
+                                </label>
                                 <div class="popup">
                                     <div class="popup__body">
                                         <div class="popup__title">Thank you!</div>
@@ -1661,22 +1667,22 @@
                                 <div class="contacts__main-block icon-location">
                                     <address class="contacts__main-link">131a 24C St - Al Bada'a, Dubai, UAE</address>
                                 </div>
-                                <div class="contacts__main-block icon-mail">
-                                    <a href="mailto:sales@topsuites.ae" class="contacts__main-link">sales@topsuites.ae</a>
-                                    <p class="contacts__main-subtitle">Ответим на все ваши вопросы</p>
-                                </div>
-                                <div class="contacts__main-block icon-telegram">
-                                    <a href="https://t.me/@topsuits" class="contacts__main-link">TopSuites</a>
-                                    <p class="contacts__main-subtitle">Telegram</p>
-                                </div>
-                                <div class="contacts__main-block icon-instagram">
-                                    <a href="" class="contacts__main-link">TopSuites</a>
-                                    <p class="contacts__main-subtitle">Instagram</p>
-                                </div>
-                                <div class="contacts__main-block icon-youtube">
-                                    <a href="" class="contacts__main-link">TopSuites</a>
-                                    <p class="contacts__main-subtitle">YouTube</p>
-                                </div>
+                                <a href="mailto:sales@topsuites.ae" class="contacts__main-block icon-mail">
+                                    <span class="contacts__main-link">sales@topsuites.ae</span>
+                                    <span class="contacts__main-subtitle">Ответим на все ваши вопросы</span>
+                                </a>
+                                <a href="https://t.me/@topsuits" class="contacts__main-block icon-telegram">
+                                    <span class="contacts__main-link">TopSuites</span>
+                                    <span class="contacts__main-subtitle">Telegram</span>
+                                </a>
+                                <a href="" class="contacts__main-block icon-instagram">
+                                    <span class="contacts__main-link">TopSuites</span>
+                                    <span class="contacts__main-subtitle">Instagram</span>
+                                </a>
+                                <a href="" class="contacts__main-block icon-youtube">
+                                    <span class="contacts__main-link">TopSuites</span>
+                                    <span class="contacts__main-subtitle">YouTube</span>
+                                </a>
                             </div>
                             <div class="contacts__feedback">
                                 <form action="#" class="contacts__form form" data-form-body>
