--- a/src/services.html
+++ b/src/services.html
@@ -29,14 +29,15 @@
                             </h2>
                         </div>
                         <div class="services__grid">
-                            <a href="#modal" data-fancybox class="service" data-params="service_id: 12, param_name: prop1, param_long_name: prop2" data-animate="bottom">
+                            <div class="service" data-animate="bottom">
                                 <span class="service__image">
                                     <img src="@img/services/01.jpg" class="cover-image" alt="service image">
                                 </span>
                                 <span class="service__desc">
                                     Pre-buying real estate analysis upon client's request
                                 </span>
-                            </a>
+                                <a href="" class="service__btn btn btn-primary btn-sm icon-plus">Follow</a>
+                            </div>
                             <a href="#modal" data-fancybox class="service" data-params="service_id: 13, param_name: prop3, param_long_name: prop222" data-animate="bottom">
                                 <span class="service__image">
                                     <img src="@img/services/02.jpg" class="cover-image" alt="service image">
