--- a/TopSuites/services.html
+++ b/TopSuites/services.html
@@ -45,13 +45,13 @@
   <!-- Twitter -->
 
   <!-- plugins -->
-  <link rel="stylesheet" href="css/libs/swiper-bundle.min.css?_v=20241212212531" />
-  <link rel="stylesheet" href="css/libs/fancybox.css?_v=20241212212531" />
-  <link rel="stylesheet" href="css/libs/no-ui-slider.css?_v=20241212212531" />
+  <link rel="stylesheet" href="css/libs/swiper-bundle.min.css?_v=20241219215239" />
+  <link rel="stylesheet" href="css/libs/fancybox.css?_v=20241219215239" />
+  <link rel="stylesheet" href="css/libs/no-ui-slider.css?_v=20241219215239" />
   <!-- plugins -->
 
-  <link rel="stylesheet" href="css/reset.min.css?_v=20241212212531" />
-  <link rel="stylesheet" href="css/style.min.css?_v=20241212212531" />
+  <link rel="stylesheet" href="css/reset.min.css?_v=20241219215239" />
+  <link rel="stylesheet" href="css/style.min.css?_v=20241219215239" />
 
 </head>
 
@@ -169,7 +169,7 @@
             </h2>
           </div>
           <div class="services__grid">
-            <a href="#modal" data-fancybox class="service" data-params="service_id: 12, param_name: prop1, param_long_name: prop2" data-animate="bottom">
+            <div class="service" data-animate="bottom">
               <span class="service__image">
                 <picture>
                   <source srcset="img/services/01.webp" type="image/webp">
@@ -179,7 +179,8 @@
               <span class="service__desc">
                 Pre-buying real estate analysis upon client's request
               </span>
-            </a>
+              <a href="" class="service__btn btn btn-primary btn-sm icon-plus">Follow</a>
+            </div>
             <a href="#modal" data-fancybox class="service" data-params="service_id: 13, param_name: prop3, param_long_name: prop222" data-animate="bottom">
               <span class="service__image">
                 <picture>
@@ -390,12 +391,12 @@
     </div>
   </div>
   <!-- plugins -->
-  <script src="js/libs/swiper-bundle.min.js?_v=20241212212531"></script>
-  <script src="js/libs/fancybox.min.js?_v=20241212212531"></script>
-  <script src="js/libs/nouislider.min.js?_v=20241212212531"></script>
+  <script src="js/libs/swiper-bundle.min.js?_v=20241219215239"></script>
+  <script src="js/libs/fancybox.min.js?_v=20241219215239"></script>
+  <script src="js/libs/nouislider.min.js?_v=20241219215239"></script>
   <!-- plugins -->
 
-  <script src="js/app.min.js?_v=20241212212531"></script>
+  <script src="js/app.min.js?_v=20241219215239"></script>
 </body>
 
 </html>
