--- a/src/index.html
+++ b/src/index.html
@@ -65,70 +65,78 @@
                         </div>
                         <div class="services__slider swiper" data-animate="bottom">
                             <div class="swiper-wrapper">
-                                <a href="" class="service swiper-slide">
+                                <div class="service swiper-slide">
                                     <span class="service__image">
                                         <img src="@img/services/01.jpg" class="cover-image" alt="service image">
                                     </span>
                                     <span class="service__desc">
                                         Pre-buying real estate analysis upon client's request
                                     </span>
-                                </a>
-                                <a href="" class="service swiper-slide">
+                                    <a href="" class="service__btn btn btn-sm  btn-primary icon-plus">Follow</a>
+                                </div>
+                                <div class="service swiper-slide">
                                     <span class="service__image">
                                         <img src="@img/services/02.jpg" class="cover-image" alt="service image">
                                     </span>
                                     <span class="service__desc">
                                         Full support from payment to keys handover
                                     </span>
-                                </a>
-                                <a href="" class="service swiper-slide">
+                                    <a href="" class="service__btn btn btn-sm  btn-primary icon-plus">Follow</a>
+                                </div>
+                                <div class="service swiper-slide">
                                     <span class="service__image">
                                         <img src="@img/services/03.jpg" class="cover-image" alt="service image">
                                     </span>
                                     <span class="service__desc">
                                         Apartment fit-out/renovation
                                     </span>
-                                </a>
-                                <a href="" class="service swiper-slide">
+                                    <a href="" class="service__btn btn btn-sm  btn-primary icon-plus">Follow</a>
+                                </div>
+                                <div class="service swiper-slide">
                                     <span class="service__image">
                                         <img src="@img/services/04.jpg" class="cover-image" alt="service image">
                                     </span>
                                     <span class="service__desc service__desc-lg">
                                         Sale of the apartment through our chain of brokers
                                     </span>
-                                </a>
-                                <a href="" class="service swiper-slide">
+                                    <a href="" class="service__btn btn btn-sm  btn-primary icon-plus">Follow</a>
+                                </div>
+                                <div class="service swiper-slide">
                                     <span class="service__image">
                                         <img src="@img/services/01.jpg" class="cover-image" alt="service image">
                                     </span>
                                     <span class="service__desc">
                                         Short-term or <br> long-term rental
                                     </span>
-                                </a>
-                                <a href="" class="service swiper-slide">
+                                    <a href="" class="service__btn btn btn-sm  btn-primary icon-plus">Follow</a>
+                                </div>
+                                <div class="service swiper-slide">
                                     <span class="service__image">
                                         <img src="@img/services/02.jpg" class="cover-image" alt="service image">
                                     </span>
                                     <span class="service__desc">
                                         Full support from payment to keys handover
                                     </span>
-                                </a>
-                                <a href="" class="service swiper-slide">
+                                    <a href="" class="service__btn btn btn-sm  btn-primary icon-plus">Follow</a>
+                                </div>
+                                <div class="service swiper-slide">
                                     <span class="service__image">
                                         <img src="@img/services/03.jpg" class="cover-image" alt="service image">
                                     </span>
                                     <span class="service__desc">
                                         Apartment fit-out/renovation
                                     </span>
-                                </a>
-                                <a href="" class="service swiper-slide">
+                                    <a href="" class="service__btn btn btn-sm  btn-primary icon-plus">Follow</a>
+                                </div>
+                                <div class="service swiper-slide">
                                     <span class="service__image">
                                         <img src="@img/services/04.jpg" class="cover-image" alt="service image">
                                     </span>
                                     <span class="service__desc">
                                         Sale of the apartment through our chain of brokers
                                     </span>
-                                </a>
+                                    <a href="" class="service__btn btn btn-sm  btn-primary icon-plus">Follow</a>
+                                </div>
                             </div>
                         </div>
                     </div>
